[package]
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
description = "A Rust implementation of a virtual machine for use with genetic algorithms."
edition = "2021"
homepage = "https://github.com/thomasbratt/watchmaker_vm"
keywords = ["algorithm", "evolution", "genetic", "virtualmachine"]
license = "MIT"
readme = "README.md"
name = "watchmaker_vm"
repository = "https://github.com/thomasbratt/watchmaker_vm"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.8.2"
