[package]
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
description = "A Rust implementation of a virtual machine for use with genetic algorithms."
edition = "2021"
homepage = "https://github.com/thomasbratt/watchmaker_vm"
keywords = ["algorithm", "evolution", "genetic", "virtualmachine"]
license = "MIT"
name = "tests"
readme = "README.md"
repository = "https://github.com/thomasbratt/watchmaker_vm"
version = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watchmaker_vm = { path="../core" }
half = "1.8.2"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "random"
harness = false

[lib]
bench = false

[features]
default = ["fuzzing"]
fuzzing = []
